--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "liri-node-app",
   "version": "1.0.0",
   "description": "Week 10 Homework Assignment",
-  "main": "index.js",
+  "main": "liri.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevearchuleta/liri-node-app.git"
+    "url": "git+https://github.com/stevearchuleta/10_liri_node?app.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Steve Archuleta",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/stevearchuleta/liri-node-app/issues"
+    "url": "https://github.com/stevearchuleta/10_liri_node?app/issues"
   },
-  "homepage": "https://github.com/stevearchuleta/liri-node-app#readme",
+  "homepage": "https://github.com/stevearchuleta/10_liri_node?app#readme",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "dotenv": "^6.2.0",
     "env": "0.0.2",
     "moment": "^2.24.0",
